# file-sharing-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-0bef88e5e75c043aaed2fb07dafaed75795a5e0e287172061c7a85f9313ad662.json  query-0c15fd5bced3e7e95d464f4d60ae2a216494470313522b4605ad67d29d161b62.json  query-10f1842235cc4f5c0839e52b61965fd9f322a75f9ad9760485741f4010a298ba.json  query-2195d29f435374025c34dddb33f186785906acc98fd72e10fb66eda2b85e92cd.json  query-3555fc5e85817d9800ce57e96d4b30da4142ec195205d8499070c8e1a14ab424.json  query-37e6cb4dce923f98a9cd28e0a054235094427676c7c96ceaf814acecb686cf0f.json  query-3c6d1c4e3e0ed096351b2dafaf0ce047189093c7b520ca9df417829bbbd7ac17.json  query-501e19280f74f3809780464f8967660a77025d68dfbe8f3086ad2ae77e012cd6.json  query-657590a232c582fd9c461fdbfcb994752844424470802eac09b3ce59edf55db3.json  query-74670d9c86dcc722ae80ea4df239f3262db2faf573d6083904b8727187d4fa99.json  query-7da8dfdd99b675997ea7d353e665facdffeb4a2fcc9386e7a89fbac5abaf1b4b.json  query-968d7c12401091f323e2a7048e38fa8b3e8fda9b0bbceceeb0ac035b68ff0ec6.json  query-99959e4d6db26742d94257d8cbbf3093530b563d142af036e3decc048a4a41e3.json  query-bfc7646d6c1c6ef432569f424f131298c4806aa2e9ba4ecf3140f81830af0055.json
migrations/: 20260324172545_create_files_table.sql  20260326014319_create_users_table.sql  20260327041850_add_user_id_to_files.sql  20260405040558_create_share_tokens_table.sql  20260406204342_add_download_count_to_files.sql
src/: auth.rs  error.rs  main.rs  tests.rs
