[package]
name = "file-sharing-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = "10.3.0"
